[package]
name = "kli"
version = "0.2.0"
edition = "2021"
description = "A collection of TUI pseudo-games for kids that love the CLI."
license = "MIT"
repository = "https://github.com/andunieee/kli"
keywords = ["tui", "game", "colors", "kid", "cli", "children"]
categories = ["games", "command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
log = "0.4"
rand = "0.8"
ratatui = "0.27"
simplelog = "0.12"
